<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add_event"
            android:icon="@drawable/ic_add"
            android:title="@string/menu_add" /> <item
        android:id="@+id/nav_query_event"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_query" /> <item
        android:id="@+id/nav_calendar"
        android:icon="@drawable/ic_calendar"
        android:title="@string/menu_calendar" /> </group>

    <item android:title="@string/menu_title_cloud">        <menu>
            <item
                android:id="@+id/nav_backup"
                android:icon="@drawable/ic_upload"
                android:title="@string/menu_backup" /> <item
            android:id="@+id/nav_restore"
            android:icon="@drawable/ic_download"
            android:title="@string/menu_restore" /> </menu>
    </item>

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_about" /> <item
        android:id="@+id/nav_exit"
        android:icon="@drawable/ic_logout"
        android:title="@string/menu_exit" /> </group>

</menu>